@@ -290,7 +290,6 @@
 				<formatter type="xml" />
 				<jvmarg value="-Dtestfiledir=${testfiledir}" />
 				<jvmarg value="-Dtesthost=${testhost}" />
-				<jvmarg value="-Djava.endorsed.dirs=endorsed_lib" />
 				<!--<test name="AllTests" todir="${report.dir}"/>-->
 				<batchtest fork="yes" todir="${reports.dir}">
 					<fileset dir="${src}/test">
@@ -315,4 +314,5 @@
 			<fail message="Tests failed." if="test.failed" />
 		</target>
 	</project>
+
 
